# cgParse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cgParse.pri
include/: nameof.h  parse.h  parseacl.h  parseanalytics.h  parseawait.h  parseclient.h  parseconvert.h  parsedatetime.h  parseerror.h  parsefile.h  parsegeopoint.h  parsegraphql.h  parsehelperbase.h  parselivequeryclient.h  parselivequerymodel.h  parselivequerysubscription.h  parseobject.h  parseobjectpointer.h  parsepolygon.h  parsequery.h  parsequeryhelper.h  parsequeryimpl.h  parsequerymodel.h  parsequeryrequest.h  parserelation.h  parsereply.h  parseresult.h  parserole.h  parsesession.h  parsetypes.h  parseuser.h
src/: CMakeLists.txt  asyncfuture.h  cgparse.cpp  cgparse.h  parse.cpp  parseacl.cpp  parseacl.h  parseanalytics.cpp  parseclient.cpp  parseclient.h  parseclient_p.h  parseclientobject.cpp  parseclientobject.h  parseconvert.cpp  parsedatetime.cpp  parseerror.h  parsefile.cpp  parsefile.h  parsefilehelper.cpp  parsefilehelper.h  parsefileimpl.cpp  parsefileimpl.h  parsefilerequest.cpp  parsefilerequest.h  parsegeopoint.cpp  parsegraphql.cpp  parsehelperbase.cpp  parsehelperbase.h  parselivequeryclient.cpp  parselivequerymodel.cpp  parselivequerysubscription.cpp  parseobject.cpp  parseobject.h  parseobjecthelper.cpp  parseobjecthelper.h  parseobjectimpl.cpp  parseobjectimpl.h  parseobjectpointer.cpp  parseobjectpointer.h  parseobjectrequest.cpp  (+33 more)
test/: CMakeLists.txt  cgParseTest.pro  parsetest.cpp  parsetest.h  test.pro
